[package]
name = "neighbourhood_watch"
version = "0.1.0"
authors = ["Jorg Bornschein <jb@capsec.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
gpio-cdev = "0.2.0"
structopt = "0.2.10"
stderrlog = "0.4.1"
log = "0.4"
fastping-rs = "0.1.5"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
