[package]
name = "neighbourhood_watch"
version = "0.1.0"
authors = ["Jorg Bornschein <jb@capsec.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.*"
dns-lookup = "1.0.*"
fastping-rs = "0.1.5"
gpio-cdev = "0.2.*"
structopt = "0.2.*"
stderrlog = "0.4.*"
log = "0.4"
# ping = "0.2.*"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
